# miniclock2

./: Cargo.toml  upload
.cargo/: config
firmware/: .gitignore  Cargo.toml  blackmagicprobe.gdb  memory.x  openocd.cfg  openocd.gdb
firmware/.cargo/: config
firmware/bcdtime/: Cargo.toml
firmware/bcdtime/src/: lib.rs
firmware/clockmain/: Cargo.toml
firmware/clockmain/src/: gfx.rs  lib.rs  tilefonts.go  tiles.rs
firmware/clockmain/src/blockfont/: blockfont.bdf  mod.rs
firmware/clockmain/src/digitfont/: digitfont.bdf  mod.rs
firmware/clockmain/src/minifont/: minifont.bdf  minifont.py  mod.rs  preview.py
firmware/ds3231/: Cargo.toml
firmware/ds3231/src/: lib.rs
firmware/graphics/: Cargo.toml
firmware/graphics/src/: lib.rs  minifont.bdf  scale.rs  vector.rs
firmware/lpc812-mbed-xpresso/: Cargo.toml  blackmagicprobe.gdb  gdb  memory.x  openocd.cfg  openocd.gdb  openocd.vscode.cfg
firmware/lpc812-mbed-xpresso/.cargo/: config
firmware/lpc812-mbed-xpresso/src/: main.rs
firmware/simulator/: Cargo.toml
firmware/simulator/src/: clock.rs  graphics.rs  main.rs
firmware/src/: main.rs
firmware/ssd1322/: Cargo.toml
firmware/ssd1322/examples/: ssd1322-spidriver.rs
firmware/ssd1322/src/: config.rs  gfx.rs  interface.rs  lib.rs  spi4wire.rs
src/: main.rs
