[package]
authors = ["Martin Atkins <mart@degeneration.co.uk>"]
edition = "2018"
readme = "README.md"
name = "miniclock2"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
feather_m0 = "0.3.0"

[[bin]]
name = "miniclock2"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
