[workspace]
members = [
    "firmware/bcdtime",
    "firmware/clockmain",
    "firmware/ds3231",
    "firmware/graphics",
    "firmware/lpc812-mbed-xpresso",
    "firmware/ssd1322",
]

[profile.dev]
codegen-units = 1
debug = true
lto = true
panic = "abort"
opt-level = "s"

[profile.release]
codegen-units = 1
debug = false
lto = true
panic = "abort"
opt-level = "s"
