[package]
authors = ["Martin Atkins <mart@degeneration.co.uk>"]
edition = "2018"
readme = "README.md"
name = "miniclock2"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
nb = "0.1.2"
panic-halt = "0.2.0"
lpc82x-hal = "0.4.0"
embedded-hal = "0.2.3"

[[bin]]
name = "miniclock2"
test = false
bench = false
