[package]
name = "clockmain"
version = "0.1.0"
authors = ["Martin Atkins <mart@degeneration.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcdtime = { path = "../bcdtime" }
graphics = { path = "../graphics" }
