[package]
authors = ["Martin Atkins <mart@degeneration.co.uk>"]
edition = "2018"
readme = "README.md"
name = "lpc812-mbed-xpresso"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[[bin]]
name = "lpc812-mbed-xpresso"
test = false
bench = false
